# wave_train

./: .gitignore  CodeMeta.json  README.md  setup.cfg  setup.py
.github/workflows/: publish-to-package-index  publish-to-testpypi.yml  pypi-publish.yml
design_logo/: wavetrain.psd
test_scripts/: load_file.py
test_scripts/Bath_Map_1/: tdse_1.py
test_scripts/Coupled/: qcmd_1.py  qcmd_2.py  qcmd_3.py  qcmd_4.py  tdse_1.py  tdse_qe_1.py  tdse_qe_2.py  tdse_qe_3.py  tise_1.py
test_scripts/Exc_Pho_Coupling/: qcmd_1.py  qcmd_2.py  qcmd_3.py  qcmd_4.py  tdse_1.py  tdse_qe_1.py  tdse_qe_2.py  tdse_qe_3.py  tise_1.py
test_scripts/Exciton/: tdse_1.py  tdse_qe_1.py  tdse_qe_2.py  tise_1.py  tise_qe_1.py  tise_qe_2.py
test_scripts/Exciton_Krylov/: tdse_1.py  tdse_qe_1.py  tdse_qe_2.py
test_scripts/Phonon/: ceom_1.py  coherent.py  tdse_1.py  tdse_qe_1.py  tdse_qe_2.py  tise_1.py
test_scripts/XYZ/: tise_1.py
wave_train/dynamics/: ceom.py  class_mech.py  mechanics.py  qcmd.py  qu_cl_mech.py  quant_mech.py  tdse.py  tise.py
wave_train/graphics/: animation.py  exceptions.py  factory.py  helper.py  services.py  style.py  visual.py
wave_train/hamilton/: bath_map_1.py  boson.py  chain.py  coupled.py  exc_pho_coupling.py  exciton.py  phonon.py  xyz.py
wave_train/io/: collect3.py  collect4_a.py  collect4_b.py  load.py  logging.py
