[metadata]
name = WaveTrain
version = 0.1
author =  Jerome Riedel, Patrick Gelß, Burkhard Schmidt
author_email = burkhard.schmidt@fu-berlin.de
description = Numerical quantum mechanics of chain-like systems based on tensor trains
license = MIT

[options]
package_dir = 
    = wave_train
python_requires = >=3.7, <4
install_requires =
    matplotlib>=3.4.3
    numpy>=1.21.2
    scikit_tt @ git+https://github.com/PGelss/scikit_tt.git
    scipy>=1.7.1
    sympy>=1.9