[metadata]
name = wave_train 
version = 1.0.3
author =  Jerome Riedel, Patrick Gelß, Burkhard Schmidt
author_email = burkhard.schmidt@fu-berlin.de
description = Numerical quantum mechanics of chain-like systems based on tensor trains
license = GNU v3.0
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.7, <4
install_requires =
    matplotlib>=3.4.3
    numpy>=1.21.2
    scipy>=1.7.1
    sympy>=1.9
